test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/validation/mutate-existing-require-targets(deprecated)/policy-no-targets.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-existing-require-targets-policy-no-targets
spec:
  rules:
    - name: mutate-secret-on-configmap-create
      match:
        any:
        - resources:
            kinds:
            - ConfigMap
            names:
            - dictionary-1
            namespaces:
            - staging
      mutate:
        mutateExistingOnPolicyUpdate: true
        patchStrategicMerge:
          metadata:
            labels:
              foo: bar
