test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/validation/mutate-existing-require-targets(deprecated)/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-existing-require-targets
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-no-targets.yaml
  - name: step-02
    try:
    - apply:
        file: policy-targets.yaml
